--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ web-sys = {version = "0.3.77", features = [
     "Performance",
     "WebGlBuffer",
     "WebGlProgram",
+    "WebGlTexture",
     "WebGl2RenderingContext",
     "WebGlShader",
     "WebGlUniformLocation",
