--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 console_error_panic_hook = "0.1.7"
 leptos = { version = "0.8.15", features = ["csr"] }
+leptos_router = "0.8.11"
 web-sys = {version = "0.3.83", features = [
     "Performance",
     "WebGlBuffer",
